Try usingn new Travis CI infrastructure and adding a dependency on lapack

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: python
+sudo: false
 python:
   - "3.2"
   - "3.3"
   - "3.4"
-before_install:
-  - sudo apt-get update
-  - sudo apt-get install gfortran
 install:
   - pip install .
 script:
   - python -m unittest
+addons:
+  apt:
+    packages:
+      - gfortran
+      - liblapack-dev
